--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="big_icon_size">70dp</dimen>
     <dimen name="medium_icon_size">40dp</dimen>
     <dimen name="small_icon_size">30dp</dimen>
     <dimen name="preset_size">100dp</dimen>
