--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -69,13 +69,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/rvEditorActions"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="@id/rvPresets" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvEditorActions"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/small_icon_size"
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
