--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="my_picture_size">80dp</dimen>
 
     <dimen name="editor_actions_margin">4dp</dimen>
+
+    <dimen name="max_brush_size">50dp</dimen>
+    <dimen name="min_brush_size">10dp</dimen>
 </resources>
