--- a/app/src/main/res/layout/item_user_medium_picture.xml
+++ b/app/src/main/res/layout/item_user_medium_picture.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ivUserPicture"
-    android:layout_width="@dimen/medium_icon_size"
-    android:layout_height="@dimen/medium_icon_size"
+    android:layout_width="@dimen/user_pictures_size"
+    android:layout_height="@dimen/user_pictures_size"
     android:layout_margin="4dp" />
