--- a/app/src/main/res/layout/my_pictures_view.xml
+++ b/app/src/main/res/layout/my_pictures_view.xml
@@ -7,10 +7,13 @@
         android:id="@+id/tvMyPictures"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@id/rvUserPictures"
         android:layout_marginTop="4dp"
+        android:layout_marginBottom="2dp"
         android:text="@string/my_pictures"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvAllPictures"
