--- a/app/src/main/res/layout/photo_editor_view.xml
+++ b/app/src/main/res/layout/photo_editor_view.xml
@@ -25,7 +25,25 @@
         app:nocropper__grid_thickness="0.8dp"
         app:nocropper__padding_color="#ff282828" />
 
-    <include layout="@layout/item_add_text" />
+
+    <FrameLayout
+        android:id="@+id/flInputTextHolder"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#77000000"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/photoEditorView"
+        app:layout_constraintTop_toTopOf="@id/photoEditorView">
+
+        <EditText
+            android:id="@+id/etTextInput"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:minWidth="200dp" />
+
+    </FrameLayout>
 
     <ImageView
         android:id="@+id/ivBrushSize"
@@ -35,10 +53,10 @@
         android:clickable="false"
         android:src="@drawable/ic_brush_size"
         app:layout_constraintBottom_toTopOf="@id/vSlider"
-        app:layout_goneMarginBottom="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/photoEditorView" />
+        app:layout_constraintTop_toTopOf="@id/photoEditorView"
+        app:layout_goneMarginBottom="48dp" />
 
     <SeekBar
         android:id="@+id/vSlider"
@@ -53,6 +71,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".8" />
+        app:layout_constraintGuide_percent=".85" />
 
 </merge>
