--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -174,9 +174,10 @@
         android:id="@+id/vPhotoEditor"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="6dp"
         android:layout_marginBottom="16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@id/rvPresets" />
+        app:layout_constraintTop_toBottomOf="@id/ivPresets" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
