Added color palette and text gravity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,31 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000</color>
+
+    <color name="red">#ff867c</color>
+    <color name="pink">#ff77a9</color>
+    <color name="purple">#df78ef</color>
+    <color name="indigo">#8e99f3</color>
+    <color name="blue">#73e8ff</color>
+    <color name="teal">#64d8cb</color>
+    <color name="green">#cfff95</color>
+    <color name="yellow">#ffff8b</color>
+    <color name="orange">#ffd95b</color>
+    <color name="deep_orange">#ffa270</color>
+    <color name="white">#fff</color>
+
+    <integer-array name="paletteColors">
+        <item>@color/red</item>
+        <item>@color/pink</item>
+        <item>@color/purple</item>
+        <item>@color/indigo</item>
+        <item>@color/blue</item>
+        <item>@color/teal</item>
+        <item>@color/green</item>
+        <item>@color/yellow</item>
+        <item>@color/orange</item>
+        <item>@color/deep_orange</item>
+        <item>@color/white</item>
+        <item>@color/black</item>
+    </integer-array>
 </resources>
