--- a/app/src/main/res/layout/photo_editor_view.xml
+++ b/app/src/main/res/layout/photo_editor_view.xml
@@ -51,7 +51,7 @@
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
         android:layout_margin="8dp"
-        android:background="#f00"
+        android:background="@drawable/ic_text_to_left"
         app:layout_constraintBottom_toBottomOf="@id/vInputTextBackground"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -60,7 +60,7 @@
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
         android:layout_margin="8dp"
-        android:background="#f00"
+        android:background="@drawable/ic_text_to_center"
         app:layout_constraintBottom_toBottomOf="@id/vInputTextBackground"
         app:layout_constraintStart_toEndOf="@id/ivTextToLeft" />
 
@@ -69,9 +69,27 @@
         android:layout_width="@dimen/small_icon_size"
         android:layout_height="@dimen/small_icon_size"
         android:layout_margin="8dp"
-        android:background="#f00"
+        android:background="@drawable/ic_text_to_right"
         app:layout_constraintBottom_toBottomOf="@id/vInputTextBackground"
         app:layout_constraintStart_toEndOf="@id/ivTextToCenter" />
+
+    <ImageView
+        android:id="@+id/ivBoldText"
+        android:layout_width="@dimen/small_icon_size"
+        android:layout_height="@dimen/small_icon_size"
+        android:layout_margin="8dp"
+        android:background="@drawable/ic_bold_text"
+        app:layout_constraintBottom_toTopOf="@id/ivTextToLeft"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivItalicText"
+        android:layout_width="@dimen/small_icon_size"
+        android:layout_height="@dimen/small_icon_size"
+        android:layout_margin="8dp"
+        android:background="@drawable/ic_italic_text"
+        app:layout_constraintBottom_toTopOf="@id/ivTextToLeft"
+        app:layout_constraintStart_toEndOf="@id/ivBoldText" />
 
     <ImageView
         android:id="@+id/ivBrushSize"
@@ -91,7 +109,7 @@
         android:layout_height="0dp"
         android:id="@+id/textAddingGroup"
         android:visibility="gone"
-        app:constraint_referenced_ids="etTextInput,vInputTextBackground,ivTextToLeft,ivTextToCenter,ivTextToRight" />
+        app:constraint_referenced_ids="etTextInput,vInputTextBackground,ivTextToLeft,ivTextToCenter,ivTextToRight,ivBoldText,ivItalicText" />
 
     <SeekBar
         android:id="@+id/vSlider"
