--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="dark_blue">#3C85BC</color>
+
     <color name="black">#000</color>
+    <color name="white">#fff</color>
 
     <color name="red">#ff867c</color>
     <color name="pink">#ff77a9</color>
@@ -15,7 +18,6 @@
     <color name="yellow">#ffff8b</color>
     <color name="orange">#ffd95b</color>
     <color name="deep_orange">#ffa270</color>
-    <color name="white">#fff</color>
 
     <integer-array name="paletteColors">
         <item>@color/red</item>
