--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
 
     <dimen name="editor_actions_margin">4dp</dimen>
 
-    <dimen name="max_brush_size">50dp</dimen>
     <dimen name="min_brush_size">10dp</dimen>
+    <dimen name="max_brush_size">50dp</dimen>
+
+    <dimen name="min_text_size">12sp</dimen>
+    <dimen name="max_text_size">50sp</dimen>
 </resources>
