--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="preset_size">100dp</dimen>
     <dimen name="my_picture_size">80dp</dimen>
 
+    <dimen name="sliders_height">25dp</dimen>
+
     <dimen name="editor_actions_margin">4dp</dimen>
 
     <dimen name="min_brush_size">10dp</dimen>
