--- a/app/src/main/res/layout/text_adding_view.xml
+++ b/app/src/main/res/layout/text_adding_view.xml
@@ -79,19 +79,25 @@
         app:layout_constraintBottom_toTopOf="@id/ivTextToLeft"
         app:layout_constraintStart_toEndOf="@id/ivItalicText" />
 
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/intervalsGroup"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:constraint_referenced_ids="tvTextHeight,vTextHeightSlider,tvSpacing,vSpacingSlider" />
+
     <TextView
         android:id="@+id/tvTextHeight"
         android:layout_width="0dp"
         android:layout_height="@dimen/sliders_height"
         android:layout_marginStart="4dp"
-        android:textSize="10sp"
-        android:gravity="center_vertical"
         android:background="@color/dark_blue"
-        android:textColor="@color/white"
+        android:gravity="center_vertical"
         android:text="@string/text_height"
+        android:textColor="@color/white"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@id/tvSpacing"
         app:layout_constraintEnd_toStartOf="@id/vSpacingSlider"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <SeekBar
         android:id="@+id/vTextHeightSlider"
@@ -104,22 +110,22 @@
         android:thumbTint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/vSpacingSlider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ivTextToRight"/>
+        app:layout_constraintStart_toEndOf="@id/ivTextToRight" />
 
     <TextView
         android:id="@+id/tvSpacing"
         android:layout_width="0dp"
         android:layout_height="@dimen/sliders_height"
-        android:textSize="10sp"
-        android:gravity="center_vertical"
         android:layout_marginStart="4dp"
         android:layout_marginBottom="4dp"
         android:background="@color/dark_blue"
-        android:textColor="@color/white"
+        android:gravity="center_vertical"
         android:text="@string/letters_spacing"
+        android:textColor="@color/white"
+        android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@id/ivOutlineText"
         app:layout_constraintEnd_toStartOf="@id/vSpacingSlider"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 
     <SeekBar
@@ -134,7 +140,8 @@
         android:thumbTint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/ivOutlineText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/ivTextToRight"/>
+        app:layout_constraintStart_toEndOf="@id/ivTextToRight" />
+
     <SeekBar
         android:id="@+id/vTextSizeSlider"
         android:layout_width="0dp"
